--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,8 @@
 .page {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: rgb(75, 75, 75);
+  font-size: 30px;
+  font-weight: 500;
 }
 
 .nav {
@@ -31,6 +34,11 @@
 
 .nav__link {
   text-decoration: none;
+  color: rgb(25, 182, 255);
+}
+
+.nav__link:hover {
+  color: rgb(114, 234, 255);
 }
 
 .about {
@@ -44,37 +52,114 @@
   font-size: 50px;
   font-weight: 500;
   text-align: center;
-  color: rgb(97, 97, 97);
 }
 
 .content {
   box-sizing: border-box;
-  padding: 50px;
+  padding: 0 20px 20px;
   display: flex;
-  justify-content: stretch;
-  justify-content: safe center;
-  gap: 50px;
+  gap: 20px;
+  flex-wrap: wrap-reverse;
 }
 
 .project {
   box-sizing: border-box;
   padding: 20px;
   background-color: rgb(235, 242, 255);
-  flex-grow: 1;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 20px;
+  align-items: center;
+  flex-basis: 1360px;
+  flex-grow: 1;
+}
+
+.project__media {
+  flex-basis: 720px;
+  flex-grow: 1;
 }
 
 .project__video {
-  flex-grow: 1;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%;
+}
+
+.project__iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
 }
 
 .project__image {
-  flex-grow: 1;
 }
 
 .project__description {
-  font-size: 30px;
-  font-weight: 500;
+  height: 100%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
   flex-grow: 1;
+}
+
+.project__title {
+  font-size: 40px;
+  font-weight: 600;
+  text-align: center;
+  margin: 0 0 30px;
+}
+
+.project__details {
+  box-sizing: border-box;
+  margin: 0 0 auto;
+}
+
+.project__link {
+  text-decoration: none;
+  color: rgb(25, 182, 255);
+  margin: 0 auto;
+}
+
+.project__link:hover {
+  color: rgb(114, 234, 255);
+}
+
+.footer {
+  padding: 60px 80px;
+  background-color: rgb(29, 29, 29);
+  color: rgb(255, 255, 255);
+}
+
+.footer__copyright {
+  margin: 108px 0 0;
+}
+
+.contacts {
+  margin: 50px auto 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contacts__logo {
+  width: 128px;
+}
+
+.contacts__tag {
+  font-size: 80px;
+  position: relative;
+  top: -10px;
+  margin: 0 0 0 20px;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+}
+
+.contacts__tag:hover {
+  color: rgb(255, 180, 255);
 }
